@startuml

package "Nemeio.Core" {

    interface IKeyboardCommandExecutor {
        + ExecuteCommand(IKeyboardCommand command) : Task
    }

    class KeyboardCommandExecutor {
        - Commands : Queue<IKeyboardCommand>
    }

}

KeyboardCommandExecutor --|> IKeyboardCommandExecutor
KeyboardCommandExecutor *-- IKeyboardIO

@enduml